--- a/day1/starter/index.html
+++ b/day1/starter/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header><h1>User Listing</h1></header>
+    <header><h1 id="heading">User Listing</h1></header>
     <main>
       <div class="main-conatiner"></div>
+      <div id="cards"></div>
     </main>
     <script src="index.js"></script>
   </body>
